@@ -55,6 +55,7 @@ public:
   operator()(std::size_t no_nbs,
 	     std::size_t system_size,
 	     MessagingGatewayBC* mg,
+	     ConcurrentMessageQueue* jsn,
 	     ConcurrentMessageQueueVec* joiner_neighbors_notif);
 
 
@@ -157,6 +158,7 @@ private:
   std::size_t pack_size;         // the real upper-bound of number of models that we ask the neighbors
 
   MessagingGatewayBC* mg;
+  ConcurrentMessageQueue* joiner_sat_notif;
   ConcurrentMessageQueueVec* joiner_neighbors_notif;
 };
 
