@@ -53,6 +53,7 @@ RelSatSolver::RelSatSolver(bool il,
 			   const SignaturePtr& ls,
 			   const HashedBiMap* co,
 			   std::size_t ss,
+			   ConcurrentMessageQueue* jsn,
 			   MessagingGatewayBC* m)
   : is_leaf(il),
     my_id(mid),
@@ -61,6 +62,7 @@ RelSatSolver::RelSatSolver(bool il,
     sig(ls),
     c2o(co),
     system_size(ss),
+    joiner_sat_notif(jsn),
     mg(m),
     xInstance(new SATInstance(std::cerr)),
     xSATSolver(new SATSolver(xInstance, std::cerr, this)),
